# chipseq

./: README.rst  environment.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: apptainer.yml  main.yml
sequana_pipelines/chipseq/: __init__.py  chipseq.rules  config.yaml  main.py  multiqc_config.yaml  requirements.txt  schema.yaml  tools.py
test/: README  test_main.py
